--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
     <dependencies>
         <dependency>
             <groupId>com.google.android</groupId>
+            <artifactId>android</artifactId>
+            <version>4.0.1.2</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.android</groupId>
             <artifactId>support-v4</artifactId>
             <version>r7</version>
         </dependency>
