--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.yohana.ea</groupId>
     <artifactId>facebook</artifactId>
     <version>3.5-SNAPSHOT</version>
-
+    <packaging>apklib</packaging>
     <build>
         <plugins>
             <plugin>
